--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,7 +58,7 @@ services:
       - spark-master
       - kafka
     command: >
-      sh -c "pip install numpy && /opt/bitnami/spark/bin/spark-submit
+      sh -c "pip install numpy requests pandas && /opt/bitnami/spark/bin/spark-submit
       --master spark://spark-master:7077
       --packages org.apache.spark:spark-sql-kafka-0-10_2.12:3.4.1,org.apache.kafka:kafka-clients:3.4.0
       --conf spark.jars.packages=org.apache.spark:spark-sql-kafka-0-10_2.12:3.4.1
